# throbbinhood

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yaml  docker-compose.yml  hugo.toml  pyproject.toml  requirements.txt  theyellowwallpaper.txt
content/: _index.md
content/stories/: _index.md  story-chronicles-of-the-celestial-conquest.md  story-gothic-romance-the-haunted-nursery.md  story-shadows-over-blackwood-manor.md  the-dukes-curse.md
data/: generation_rules.yaml  genres.yaml  pipeline.db  tropes.yaml
database/: schema.sql
scripts/: add_test_story.py  db.py  generate_story.py  import_gutenberg.py
src/: config.py  container.py
src/application/: asset_service.py  crawl_manager.py  download_service.py  scoring_service.py
src/domain/: entities.py  value_objects.py
src/infrastructure/: crawlee_engine.py  crawler_factory.py  database.py  download_manager.py  logger.py  repositories.py
src/presentation/: components.py  routes.py  templates.py
