[tool.poetry]
name = "discovery-platform"
version = "0.1.0"
description = "Containerized document discovery platform"
authors = ["Kyle Kelly <KyleJKelly@gmail.com>"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py312']
